--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -73,6 +73,26 @@
   file = {/Users/nidhivinod/Zotero/storage/JZ6DEJUT/Akinshina et al. - 2020 - Xeromorphic Features of the Leaves of Liriodendron.pdf}
 }
 
+@article{albertAgedependentLeafPhysiology2018,
+  title = {Age-Dependent Leaf Physiology and Consequences for Crown-Scale Carbon Uptake during the Dry Season in an {{Amazon}} Evergreen Forest},
+  author = {Albert, Loren P. and Wu, Jin and Prohaska, Neill and de Camargo, Plinio Barbosa and Huxman, Travis E. and Tribuzy, Edgard S. and Ivanov, Valeriy Y. and Oliveira, Rafael S. and Garcia, Sabrina and Smith, Marielle N. and Oliveira Junior, Raimundo Cosme and Restrepo-Coupe, Natalia and da Silva, Rodrigo and Stark, Scott C. and Martins, Giordane A. and Penha, Deliane V. and Saleska, Scott R.},
+  options = {useprefix=true},
+  date = {2018},
+  journaltitle = {New Phytologist},
+  volume = {219},
+  number = {3},
+  pages = {870--884},
+  issn = {1469-8137},
+  doi = {10.1111/nph.15056},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/nph.15056},
+  urldate = {2022-02-07},
+  abstract = {Satellite and tower-based metrics of forest-scale photosynthesis generally increase with dry season progression across central Amazônia, but the underlying mechanisms lack consensus. We conducted demographic surveys of leaf age composition, and measured the age dependence of leaf physiology in broadleaf canopy trees of abundant species at a central eastern Amazon site. Using a novel leaf-to-branch scaling approach, we used these data to independently test the much-debated hypothesis – arising from satellite and tower-based observations – that leaf phenology could explain the forest-scale pattern of dry season photosynthesis. Stomatal conductance and biochemical parameters of photosynthesis were higher for recently mature leaves than for old leaves. Most branches had multiple leaf age categories simultaneously present, and the number of recently mature leaves increased as the dry season progressed because old leaves were exchanged for new leaves. These findings provide the first direct field evidence that branch-scale photosynthetic capacity increases during the dry season, with a magnitude consistent with increases in ecosystem-scale photosynthetic capacity derived from flux towers. Interactions between leaf age-dependent physiology and shifting leaf age-demographic composition are sufficient to explain the dry season photosynthetic capacity pattern at this site, and should be considered in vegetation models of tropical evergreen forests.},
+  langid = {english},
+  keywords = {drought,dry season green-up,leaf ontogeny,phenology,photosynthesis,scaling,tropical forests},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.15056},
+  file = {/Users/nidhivinod/Zotero/storage/LHEVFZEE/Albert et al. - 2018 - Age-dependent leaf physiology and consequences for.pdf}
+}
+
 @article{albertCrypticPhenologyPlants2019,
   title = {Cryptic Phenology in Plants: {{Case}} Studies, Implications, and Recommendations},
   shorttitle = {Cryptic Phenology in Plants},
@@ -4874,6 +4894,25 @@
   file = {/Users/nidhivinod/Zotero/storage/ZF2HG6QV/Hogan et al. - 2019 - Drought and the interannual variability of stem gr.pdf}
 }
 
+@article{hoganDroughtInterannualVariability2019a,
+  title = {Drought and the Interannual Variability of Stem Growth in an Aseasonal, Everwet Forest},
+  author = {Hogan, J. Aaron and McMahon, Sean M. and Buzzard, Vanessa and Michaletz, Sean T. and Enquist, Brian J. and Thompson, Jill and Swenson, Nathan G. and Zimmerman, Jess K.},
+  date = {2019},
+  journaltitle = {Biotropica},
+  volume = {51},
+  number = {2},
+  pages = {139--154},
+  issn = {1744-7429},
+  doi = {10.1111/btp.12624},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/btp.12624},
+  urldate = {2022-02-08},
+  abstract = {Linking drought to the timing of physiological processes governing tree growth remains one limitation in forecasting climate change effects on tropical trees. Using dendrometers, we measured fine-scale growth for 96 trees of 25 species from 2013 to 2016 in an everwet forest in Puerto Rico. Rainfall over this time span varied, including an unusual, severe El Niño drought in 2015. We assessed how growing season onset, median day, conclusion, and length varied with absolute growth rate and tree size over time. Stem growth was seasonal, beginning in February, peaking in July, and ending in November. Species growth rates varied between 0 and 8 mm/year and correlated weakly with specific leaf area, leaf phosphorus, and leaf nitrogen, and to a lesser degree with wood specific gravity and plant height. Drought and tree growth were decoupled, and drought lengthened and increased variation in growing season length. During the 2015 drought, many trees terminated growth early but did not necessarily grow less. In the year following drought, trees grew more over a shorter growing season, with many smaller trees showing a post-drought increase in growth. We attribute the increased growth of smaller trees to release from light limitation as the canopy thinned because of the drought, and less inferred hydraulic stress than larger trees during drought. Soil type accounted for interannual and interspecific differences, with the finest Zarzal clays reducing tree growth. We conclude that drought affects the phenological timing of tree growth and favors the post-drought growth of smaller, sub-canopy trees in this everwet forest. Abstract in Spanish is available with online material.},
+  langid = {english},
+  keywords = {allocation,Aseasonal,dendrometers,drought,interannual,Luquillo,phenology,tree growth,tropical forest},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/btp.12624},
+  file = {/Users/nidhivinod/Zotero/storage/FYQ2RIRA/Hogan et al. - 2019 - Drought and the interannual variability of stem gr.pdf}
+}
+
 @article{houterOntogeneticChangesLeaf2012,
   title = {Ontogenetic Changes in Leaf Traits of Tropical Rainforest Trees Differing in Juvenile Light Requirement},
   author = {Houter, Nico C. and Pons, Thijs L.},
@@ -6094,6 +6133,18 @@
   file = {/Users/nidhivinod/Zotero/storage/IARLI32D/Krause et al. - 2010 - High-temperature tolerance of a tropical tree, Fic.pdf}
 }
 
+@article{krauseHightemperatureToleranceTropical2010b,
+  title = {High-Temperature Tolerance of a Tropical Tree, {{Ficus}} Insipida: {{Methodological}} Reassessment and Climate Change Considerations},
+  shorttitle = {High-Temperature Tolerance of a Tropical Tree, {{Ficus}} Insipida},
+  author = {Krause, G. and Winter, Klaus and Krause, Barbara and Jahns, Peter and Garcia, Milton and Aranda, Jorge and Virgo, Aurelio},
+  date = {2010-01-01},
+  journaltitle = {Functional Plant Biology - FUNCT PLANT BIOL},
+  volume = {37},
+  doi = {10.1071/FP10034},
+  abstract = {In view of anthropogenic global warming, heat tolerance of a neotropical pioneer tree, Ficus insipida Willd., was determined. Sections of sun leaves from a mature tree and from seedlings cultivated at ambient and elevated temperatures were heated to 42–53 C. Leaves from a late-successional tree species, Virola sebifera Aubl., were also studied. Widely used chlorophyll a fluorescence methods based on heat-induced rise of initial fluorescence emission, F o , and decrease in the ratio of variable to maximum fluorescence, F v /F m , were reassessed. F v /F m determined 24 h after heat treatment was the fluorescence parameter most suitable to assess the lethal temperature causing permanent tissue damage. Thermo-tolerance was underestimated when F o and F v /F m were recorded immediately after the heat treatment. The limit of thermo-tolerance was between 50 and 53 C, only a few C above peak leaf temperatures measured in situ. The absence of seasonal changes in thermo-tolerance and only marginal increases in thermo-tolerance of plants grown under elevated temperatures suggest little capacity for further heat acclimation. Heat-stress experiments with intact potted seedlings also revealed irreversible leaf damage at 51–53 C, but plants survived and developed new leaves during post-culture.},
+  file = {/Users/nidhivinod/Zotero/storage/2UEQHYFG/Krause et al. - 2010 - High-temperature tolerance of a tropical tree, Fic.pdf}
+}
+
 @article{krauseLargeUncertaintyCarbon2018,
   title = {Large Uncertainty in Carbon Uptake Potential of Land-Based Climate-Change Mitigation Efforts},
   author = {Krause, Andreas and Pugh, Thomas A. M. and Bayer, Anita D. and Li, Wei and Leung, Felix and Bondeau, Alberte and Doelman, Jonathan C. and Humpenöder, Florian and Anthoni, Peter and Bodirsky, Benjamin L. and Ciais, Philippe and Müller, Christoph and Murray-Tortarolo, Guillermo and Olin, Stefan and Popp, Alexander and Sitch, Stephen and Stehfest, Elke and Arneth, Almut},
@@ -6512,6 +6563,24 @@
   doi = {10.2307/2388739},
   abstract = {The spectral quality of radiation in the understory of two neotropical rainforests, Barro Colorado Island in Panama and La Selva in Costa Rica, is profoundly affected by the density of the canopy Understory light conditions in both forests bear similar spectral characteristics. In both the greatest changes in spectral quality occur at low flux densities, as in the transition from extreme shade to small light flecks. Change in spectral quality, as assessed by the red far-red (R:FR) ratio, the ratio of radiant energy 400-700: 300-1100 nm, and the ratio of quantum flux density 400-700:300-1100 nm, is strongly correlated with a drop in percentage of solar radiation as measurable by a quantum radiometer. Thus, by knowing the percentage of photosynthetic photon flux density (PPFD) in relation to full sunlight, it is possible to estimate the spectral quality in the forest at a particular time and microsite.},
   file = {/Users/nidhivinod/Zotero/storage/MNXJXYNR/Lee - 1987 - The Spectral Distribution of Radiation in Two Neot.pdf}
+}
+
+@article{leeSpringPhenologicalEscape2021,
+  title = {Spring Phenological Escape Is Critical for the Survival of Temperate Tree Seedlings},
+  author = {Lee, Benjamin R. and Ibáñez, Inés},
+  date = {2021},
+  journaltitle = {Functional Ecology},
+  volume = {35},
+  number = {8},
+  pages = {1848--1861},
+  issn = {1365-2435},
+  doi = {10.1111/1365-2435.13821},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/1365-2435.13821},
+  urldate = {2022-02-07},
+  abstract = {Understorey plants in deciduous forests often rely on access to ephemeral light availability before the canopy closes in spring and after the canopy reopens in fall, a strategy commonly referred to as phenological escape. Although there is evidence for a relationship between understorey plant phenology and demographic performance, a mechanistic link is still missing. In this study, we bridged this gap by estimating annual carbon assimilation as a function of foliar phenology and photosynthetic capacity for seedlings of two temperate tree species that commonly co-occur across eastern North America. We then modelled the relationship between estimated carbon assimilation and observed seedling survival and growth. Our results indicate that seedlings of both species strongly depend on spring phenological escape to assimilate the majority of their annual carbon budget and that this mechanism significantly affects their likelihood of survival (but not growth). Foliar desiccation also played a strong role in driving patterns of seedling survival, suggesting that water availability will also help shape seedling recruitment dynamics. We found only weak associations between seedling senescence in fall and annual carbon assimilation, suggesting that phenological escape in fall plays a relatively minor role in seedling demographic performance. Our results indicate that spring phenological escape is critical for survival of these temperate tree species, and thus, any changes to this dynamic associated with climate change could strongly impact these species' recruitment. A free Plain Language Summary can be found within the Supporting Information of this article.},
+  langid = {english},
+  keywords = {Acer saccharum,C3 photosynthesis,carbon assimilation,desiccation,foliar phenology,growth,Quercus rubra},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/1365-2435.13821}
 }
 
 @article{legnerWithincanopyVariationPhotosynthetic2014,
@@ -9197,6 +9266,22 @@
   abstract = {At the intersection of consumer behaviour and plant competition is the concept of refuge-mediated apparent competition: an indirect interaction whereby plants provide a refuge for a shared consumer, subsequently increasing consumer pressure on another plant species. Here, we use a simple model and empirical examples to develop and illustrate the concept of refuge-mediated apparent competition. We find that the likelihood that an inferior competitor will succeed via refuge-mediated apparent competition is greater when competitors have similar resource requirements and when consumers exhibit a strong response to the refuge and high attack rates on the superior competitor. Refuge-mediated apparent competition may create an emergent Allee effect, such that a species invades only if it is sufficiently abundant to alter consumer impact on resident species. This indirect interaction may help explain unresolved patterns observed in biological invasion, such as the different physical structure of invasive exotic plants, the lag phase, and the failure of restoration efforts. Given the ubiquity of refuge-seeking behaviour by consumers and the ability of consumers to alter the outcome of direct competition among plants, refuge-mediated apparent competition may be an underappreciated mechanism affecting the composition and diversity of plant communities.Ecology Letters (2010) 13: 11–20},
   langid = {english},
   keywords = {Allee effects,Behaviour,biological invasions,consumers,herbivores,short-term apparent competition}
+}
+
+@article{osadaLeafDynamicsMaintenance2001,
+  title = {Leaf {{Dynamics}} and {{Maintenance}} of {{Tree Crowns}} in a {{Malaysian Rain Forest Stand}}},
+  author = {Osada, Noriyuki and Takeda, Hiroshi and Furukawa, Akio and Awang, Muhamad},
+  date = {2001},
+  journaltitle = {Journal of Ecology},
+  volume = {89},
+  number = {5},
+  eprint = {3072151},
+  eprinttype = {jstor},
+  pages = {774--782},
+  publisher = {{[Wiley, British Ecological Society]}},
+  issn = {0022-0477},
+  abstract = {1 Leaf demography was examined for trees of various heights over a 3.7-year period in a Malaysian rain forest. We compared demography between upper and lower parts of the crown and its relation to height. The results were analysed at the stand level by pooling several trees of various shade-tolerant species, as well as three species for which multiple individuals were sampled. 2 Photon flux density was generally higher in the upper than in the lower crowns. Leaf production rate and leaf loss rate were faster, and number of leaf cohorts and median leaf life span were therefore lower, in the upper crowns of most trees. Faster rates of leaf loss and shorter life spans were associated with increasing height, although leaf production rate was unaffected. 3 Leaf life span and specific leaf area were plastic traits which decreased with height within several shade-tolerant tree species, indicating functional convergence. 4 Vertical distribution of leaf biomass was almost even in the stand. Because leaf life span was shorter in the upper canopy, these leaves contributed most to litter production. The vertical structure of the forest stand was therefore maintained through dynamic processes in trees of various heights over short time-scales.},
+  file = {/Users/nidhivinod/Zotero/storage/LAJILT3H/Osada et al. - 2001 - Leaf Dynamics and Maintenance of Tree Crowns in a .pdf}
 }
 
 @article{osnasDivergentDriversLeaf2018a,
