--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -132,7 +132,7 @@ The net result of higher temperatures may be increased or decreased tree growth 
 The resulting feedbacks to the climate system, carbon storage, and changes in albedo and hydrology will in turn impact the future trajectory of climate change [@bonan_ecological_2016], yet the degree of the impact remains uncertain [@krauseLargeUncertaintyCarbon2018; @friedlingsteinClimateCarbonCycle2006].
  
 A great measure of uncertainty arises due to the differential impacts of rising temperatures on trees of differential size and crown position, especially as small understory trees exist in microenvironments that are substantially buffered by more exposed canopy trees [@zellweger_seasonal_2019; @davisMicroclimaticBufferingForests2019].
-Forests are vertically and horizontally stratified, with overstory canopies playing a crucial role in moderating forest climatic conditions [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017], including buffering understory microclimates from extreme meteorological conditions [@zellweger_seasonal_2019]. 
+Forests are vertically and horizontally stratified, with canopies playing a crucial role in moderating forest climatic conditions [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017], including buffering understory microclimates from extreme meteorological conditions [@zellweger_seasonal_2019]. 
 This creates a vertical stratification of the biophysical environment such as temperature, light, wind, humidity and CO~2~ concentrations that influences leaf traits, thermoregulation and metabolism along the gradient, with implications for whole plant performance [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016a].
 Despite the fact that this vertical gradient inevitably shapes nearly every aspect of plant metabolism, demography, and ecology, we lack comprehensive understanding of these gradients [but see @niinemetsPhotosyntheticAcclimationSimultaneous2004].
 Importantly, this limits our ability to understand how warming temperatures will affect leaf-level metabolism, whole-plant performance, and, in turn, forest ecosystem dynamics, biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions.
@@ -322,7 +322,7 @@ Less than half of tree species express significant light-dependent emissions [@k
 The vertical structure of microenvironments likely influences forest photosynthetic capacity [@rey-sanchez_spatial_2016] via leaf phenology. 
 In deciduous forests, the timing and extent of seasonal leaf gain and loss is structured across the vertical profile. 
 In temperate deciduous forests, seasonal warming occurs earlier in the sheltered understory, facilitating earlier spring bud-break compared to the cooler upper canopy [@augspurgerDifferencesLeafPhenology2003]. 
-Early leaf-out allows some tree saplings to do the majority of their annual carbon fixation before the overstory closes and reduces light availability [@leeSpringPhenologicalEscape2021]. 
+Early leaf-out allows some tree saplings to do the majority of their annual carbon fixation before canopy foliage and reduces light availability [@leeSpringPhenologicalEscape2021]. 
 Within tropical dry-season-deciduous species, the fraction of seasonally deciduous individuals has been found to increase toward larger tree size classes in hotter, brighter environments, with understory individuals typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c]. Even in evergreen tropical forests, seasonal variation in leaf quantities follows distinct patterns throughout the vertical profile depending on height and light environments [@smithSeasonalDroughtrelatedChanges2019]. Leaf turnover is faster in the upper canopy than the understory, putatively due to more rapid accumulation of leaf damage [@osadaLeafDynamicsMaintenance2001; @millerOnlySunlitLeaves2021].
 Leaf age distributions affect forest photosynthetic capacity [@wuLeafDevelopmentDemography2016; @niinemetsLeafAgeDependent2016] and stress tolerance via age specific leaf function [@albertAgedependentLeafPhysiology2018; @kikuzawaSynthesisRelationshipsLeaf2006; @mariasImpactsLeafAge2017; @zhouLeafageEffectsTemperature2015]. Leaf phenology thereby both responds to and influences the vertical structure of forest microenvironments and function.
 
@@ -590,7 +590,7 @@ These data can be leveraged in combination with thermal remote sensing data from
 ![**Figure `r fig_model`.** Lidar and thermal remote sensing data can be used to measure vertical forest structure and plant thermal signatures at increasingly large scales. (a-b) Integrating in situ and remote sensing measurements will support our ability to scale understanding of vertical gradients within and across ecosystems. (c) In turn, these efforts can be used to directly inform ecosystem model development and parameterization. Vertically resolved in situ data could include any variable listed in Table 1 or 2. Panel b shows drone lidar point cloud data colored with thermal data from a savanna woodland in Kruger National Park, South Africa illustrating vertical and horizontal variation in vegetation temperature. Image courtesy of the Harvard Animal-Landscape Observatory, Peter B. Boucher and Andrew B. Davies.](schematics/fig_remote_sensing.png)
 
 Detailed structural information from lidar data has been used to measure tree height, DBH, and crown dimensions [@fisherECOSTRESSNASANext2020], evaluate spatial variation in vertical leaf area density profiles [@dettoSpatialVariabilityTropical2015], and resolve complex seasonal and diurnal variation in shortwave radiation forcing in ecosystems [@musselmanEstimationSolarDirect2013].
-In addition, shading by the overstory can be better represented to predict understory temperatures by modeling the time-varying interaction of the forest canopy with solar radiation, as has been done in other lidar-based analyses [e.g., @davisLiDARderivedTopographyForest2019].
+In addition, shading by the canopy can be better represented to predict understory temperatures by modeling the time-varying interaction of the forest canopy with solar radiation, as has been done in other lidar-based analyses [e.g., @davisLiDARderivedTopographyForest2019].
 Satellite and airborne thermal infrared remote sensing analyses are now being conducted at regional and continental scales, although very few applications exist at finer-scales necessary for understanding of vertical variation in plant canopy temperatures [@johnstonWhatLiesVertical2020]. 
 As an example of the type of insight that can be gained from this approach, @pauTropicalForestTemperature2018 used data from a tower-based FLIR camera in combination with eddy-covariance data and found that tropical forest canopy temperatures were more strongly associated with GPP than $T_{air}$ or VPD. 
 However, the authors did not consider vertical light environment conditions even though light directly influences the deviation between canopy temperature and $T_{air}$. 
